--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,14 +9,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".salvarActivity"></activity>
-        <activity android:name=".MainActivity">
+        <activity android:name=".AtualizarActivity"></activity>
+        <activity android:name=".PrincipalActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ComprarActivity" />
+        <activity android:name=".EstoqueActivity" />
+        <activity android:name=".SalvoActivity" />
+        <activity android:name=".SalvarActivity" />
     </application>
 
 </manifest>
