--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AtualizarActivity"></activity>
+        <activity android:name=".PagarActivity">
+
+        </activity>
+        <activity android:name=".AtualizarActivity" />
         <activity android:name=".PrincipalActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,7 +20,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ComprarActivity" />
+        <activity android:name=".ComprarActivity">
+
+        </activity>
         <activity android:name=".EstoqueActivity" />
         <activity android:name=".SalvoActivity" />
         <activity android:name=".SalvarActivity" />
